# ghost-browser

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SPEC.md  agent.md  pyproject.toml
docs/assets/: README.md
src/ghost_browser/: SKILL.md  __init__.py  cdp.py  cli.py  client.py  daemon.py  gateway.py  ipc.py  paths.py  redaction.py  release_state.py  settings.py  workspace.py
tests/: test_cli.py  test_gateway.py  test_security.py
