[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ghost-browser"
version = "0.1.0"
description = "Raw CDP browser harness for Ghost Gateway"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ghost Browser contributors" }]
keywords = ["agent", "browser", "cdp", "ghost", "stealth"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = ["websockets>=15,<16"]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9"]

[project.scripts]
ghost-browser = "ghost_browser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ghost_browser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
